--- a/package.json
+++ b/package.json
@@ -15,16 +15,21 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "express-jwt": "^5.3.1",
     "graphql": "^0.13.2",
+    "highcharts": "^7.0.3",
+    "highcharts-react-official": "^2.1.3",
     "history": "^4.7.2",
     "isomorphic-style-loader": "^4.0.0",
     "jsonwebtoken": "^8.3.0",
+    "mysql2": "^1.6.5",
     "node-fetch": "^2.2.0",
+    "nopt": "^4.0.1",
     "normalize.css": "^8.0.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
@@ -33,14 +38,15 @@
     "query-string": "^6.1.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "reactstrap": "^8.0.0",
     "sequelize": "^4.38.1",
     "serialize-javascript": "^1.5.0",
     "source-map-support": "^0.5.9",
-    "sqlite3": "^4.0.2",
     "universal-router": "^6.0.0",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.4.3",
     "@babel/core": "^7.0.0",
     "@babel/node": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
@@ -139,7 +145,6 @@
     }
   },
   "scripts": {
-    "precommit": "lint-staged",
     "lint-js": "eslint --ignore-path .gitignore --ignore-pattern \"!**/.*\" .",
     "lint-css": "stylelint \"src/**/*.{css,less,styl,scss,sass,sss}\"",
     "lint": "yarn run lint-js && yarn run lint-css",
@@ -160,6 +165,8 @@
     "deploy": "babel-node tools/run deploy",
     "render": "babel-node tools/run render",
     "serve": "babel-node tools/run runServer",
-    "start": "babel-node tools/run start"
+    "start": "babel-node tools/run start",
+    "debug": "babel-node --inspect tools/run start",
+    "test1": "babel-node sampleCode/sequelize1"
   }
 }
